# TevianApp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  app.qrc
Source/: AbstractApi.cpp  AbstractApi.hpp  AuthorizationHandler.cpp  AuthorizationHandler.hpp  BaseApi.cpp  BaseApi.hpp  CMakeLists.txt  Commons.cpp  Commons.hpp  Defines.hpp  FaceApi.cpp  FaceApi.hpp  FaceData.hpp  FaceDetector.cpp  FaceDetector.hpp  PhotoHandler.cpp  PhotoHandler.hpp  Settings.cpp  Settings.hpp
Source/Gui/: CMakeLists.txt  Controls.cpp  Controls.hpp  DetectionRenderer.cpp  DetectionRenderer.hpp  ImageBook.cpp  ImageBook.hpp  ImageViewTab.cpp  ImageViewTab.hpp  PreferenceDialog.cpp  PreferenceDialog.hpp  RenderWidget.cpp  RenderWidget.hpp  Scaling.cpp  Scaling.hpp  ViewPort.cpp  ViewPort.hpp  Window.cpp  Window.hpp
Tests/: CMakeLists.txt  Tevian.cpp
